on boarding UI fixes

--- a/services/client/src/view/pages/onboarding/style.css
+++ b/services/client/src/view/pages/onboarding/style.css
@@ -11,6 +11,7 @@
 	}
 	.swiper-slide:not(.swiper-slide-active) {
 		@apply scale-90 opacity-30;
+		@apply relative -z-10;
 	}
 
 	.swiper-pagination {
