--- a/services/client/src/index.css
+++ b/services/client/src/index.css
@@ -16,3 +16,8 @@
 ::-webkit-scrollbar-thumb {
 	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
+
+:root {
+	--primary-color: #2196f3;
+	--secondary-color: #000;
+}
